@@ -5,7 +5,7 @@
 ##  Copyright (c) 1996, 97, 98, 99, 2000 Kunihiro Ishiguro <kunihiro@zebra.org>
 ##  Portions Copyright (c) 2003 Paul Jakma <paul@dishone.st>
 ##
-## $Id: configure.ac,v 1.93 2005/03/27 21:00:35 hasso Exp $
+## $Id: configure.ac,v 1.94 2005/03/28 15:29:07 hasso Exp $
 AC_PREREQ(2.53)
 
 AC_INIT(Quagga, 0.99.0, [http://bugzilla.quagga.net])
@@ -948,7 +948,7 @@ dnl  AC_CHECK_LIB(snmp, asn_parse_int, HAVE_SNMP=yes)
                   AC_DEFINE(HAVE_SNMP,,SNMP)
 		  AC_DEFINE(HAVE_NETSNMP,,SNMP)
                   AC_DEFINE(UCD_COMPATIBLE,,SNMP)
-                  INCLUDES="${INCLUDES} -I/usr/include/net-snmp -I/usr/include/net-snmp/library"
+                  SNMP_INCLUDES="${SNMP_INCLUDES} -I/usr/include/net-snmp -I/usr/include/net-snmp/library"
 		  if test "${HAVE_NETSNMP}" = "yes"; then
 		        LIBS="${LIBS} -lnetsnmp"
 		  else
@@ -957,19 +957,19 @@ dnl  AC_CHECK_LIB(snmp, asn_parse_int, HAVE_SNMP=yes)
                   ;;
       /usr/include/ucd-snmp/*) 
                   AC_DEFINE(HAVE_SNMP,,SNMP)
-                  INCLUDES="${INCLUDES} -I/usr/include/ucd-snmp"
+                  SNMP_INCLUDES="${SNMP_INCLUDES} -I/usr/include/ucd-snmp"
     		  LIBS="${LIBS} -lsnmp"
                   ;;
       /usr/local/include/ucd-snmp/*) 
                   AC_DEFINE(HAVE_SNMP,,SNMP)
-  	          INCLUDES="${INCLUDES} -I/usr/local/include/ucd-snmp"
+  	          SNMP_INCLUDES="${SNMP_INCLUDES} -I/usr/local/include/ucd-snmp"
   		  LIBS="${LIBS} -L/usr/local/lib -lsnmp"
                   ;;
       /usr/local/include/net-snmp/*)
       		AC_DEFINE(HAVE_SNMP,,SNMP)
       		AC_DEFINE(HAVE_NET_SNMP,,SNMP)
       		AC_DEFINE(UCD_COMPATIBLE,,SNMP)
-      		INCLUDES="${INCLUDES} -I/usr/local/include/net-snmp"
+      		SNMP_INCLUDES="${SNMP_INCLUDES} -I/usr/local/include/net-snmp"
       		LIBS="${LIBS} -L/usr/local/lib -lnetsnmp"
       		;;
     esac
@@ -982,6 +982,8 @@ fi
 if test "${enable_snmp}" = "yes" -a "${HAVE_SNMP}" != "yes"; then
   AC_MSG_ERROR([--enable-snmp given, but cannot find support for SNMP])
 fi
+
+AC_SUBST(SNMP_INCLUDES)
 
 dnl ----------------------------
 dnl check sa_len of sockaddr
@@ -1280,7 +1282,7 @@ host operationg system  : ${host_os}
 source code location    : ${srcdir}
 compiler                : ${CC}
 compiler flags          : ${CFLAGS}
-includes                : ${INCLUDES}
+includes                : ${INCLUDES} ${SNMP_INCLUDES}
 linker flags            : ${LDFLAGS} ${LIBS}
 state file directory    : ${quagga_statedir}
 config file directory   : `eval echo \`echo ${sysconfdir}\``
